# axiom

./: Cargo.toml  LICENSE  NOTES.md  README.md  TODO  TODO.md
_examples/: README.md  update-plugins.sh
axiom_cli/: Cargo.toml
axiom_cli/src/: cli.rs  commands.rs  main.rs
axiom_cli/src/commands/: create.rs  delete.rs  edit.rs  list.rs  start.rs  update.rs
crates/axiom/: Cargo.toml
crates/axiom-cli/: Cargo.toml
crates/axiom-cli/src/: main.rs
crates/axiom-cli/src/commands/: attach.rs  delete.rs  list.rs  mod.rs  new.rs  send_command.rs  start.rs  stop.rs  update.rs
crates/axiom-cli/src/commands/backup/: mod.rs  new.rs
crates/axiom-cli/src/commands/plugin/: new.rs
crates/axiom/src/: lib.rs
crates/axiom_core/: Cargo.toml
crates/axiom_core/src/: lib.rs  manifest.rs
crates/paper/: Cargo.toml
crates/paper/src/: build.rs  error.rs  lib.rs  version.rs
crates/tmux/: Cargo.toml
crates/tmux/src/: errors.rs  lib.rs  session.rs  window.rs
crates/varint/: Cargo.toml
crates/varint/src/: lib.rs
guide/: book.toml
guide/src/: README.md  SUMMARY.md  installation.md  usage.md
plugin/: README.md  build.gradle.kts  settings.gradle.kts
plugin/src/main/java/io/github/nicdgonzalez/axiom/: Axiom.java
plugin/src/main/resources/: plugin.yml
scripts/: version_manifest.py
src/: args.rs  backups.rs  commands.rs  config.rs  context.rs  error.rs  fs.rs  hint.rs  lib.rs  main.rs  manifest.rs  package.rs  paper.rs  server.rs  tmux.rs  varint.rs  version.rs
src/commands/: build.rs  mod.rs  start.rs  status.rs  status_ext.rs  update.rs
src/paper/: build.rs  mod.rs  version.rs
src/tmux/: session.rs
