[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"

[workspace.dependencies]
paper = { path = "crates/paper" }
varint = { path = "crates/varint" }
server_properties = { path = "crates/server_properties" }

[package]
name = "axiom"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.39", features = ["derive"] }
colored = "3.0.0"
dirs = "6.0.0"
paper.workspace = true
reqwest = { version = "0.12.19", features = ["blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
server_properties.workspace = true
symlink = "0.1.0"
toml = "0.8.23"
toml_edit = "0.22.27"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
varint.workspace = true
