[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"

[workspace.dependencies]
axiom_core = { path = "./crates/axiom_core" }
paper = { path = "./crates/paper" }
varint = { path = "./crates/varint" }

[package]
name = "axiom"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axiom_core.workspace = true
clap = { version = "4.5.39", features = ["derive"] }
colored = "3.0.0"
paper.workspace = true
regex = "1.11.1"
reqwest = { version = "0.12.19", features = ["blocking"] }
rev_buf_reader = "0.3.0"
semver = "1.0.26"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
symlink = "0.1.0"
tempdir = "0.3.7"
toml = "0.8.23"
toml_edit = "0.22.27"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
trust-dns-resolver = "0.23.2"
varint.workspace = true
