[package]
name = "axiom-cli"
version = "0.1.0"
edition.workspace = true

[dependencies]
axiom.workspace = true
tmux.workspace = true

anyhow.workspace = true
chrono = "0.4.38"
clap = { version = "4.5.21", features = ["derive"] }
colored = "2.1.0"
flate2 = "1.0.35"
tar = "0.4.43"
symlink = "0.1.0"
semver = "1.0.23"

[[bin]]
name = "axiom"
path = "./src/main.rs"
